[package]
name = "app"
version = "0.1.0"
description = "1lev1 mobile/desktop shell (Tauri v2)"
edition = "2021"

# Required for Tauri mobile targets (Android loads the app as a shared library)
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
